<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.Login"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:padding="20dp">
<!--#EA0D40, #EA0D40-->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        android:src="@drawable/_684755528feather_wings"
        android:contentDescription="@string/logo_text" />

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:transitionName="logo_text"
        android:layout_marginTop="-20dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome_back"
        android:textSize="40sp"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:transitionName="logo_desc"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/purple_500"
            android:transitionName="username_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:textColor="@color/purple_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/purple_500"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:transitionName="password_tran">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                app:passwordToggleEnabled="true"
                android:textColor="@color/purple_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/forgot_password"
            android:layout_gravity="right"
            android:textColor="@color/black"
            android:elevation="0dp"
            android:layout_margin="5dp"
            tools:ignore="RtlHardcoded" />
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#000"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:transitionName="button_tran" />


        <Button
            android:id="@+id/signup_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/new_user_sign_up"
            android:fontFamily="@font/antic"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:layout_margin="5dp"
            android:textColor="#000"
            android:transitionName="login_signup_tran"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_circle"
            android:elevation="10dp"
            android:layout_marginBottom="5dp">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


    </LinearLayout>



</LinearLayout>